libs/@local/hashql/eval/tests/ui/graph/read/entity/unsupported-closure.jsonc
//@ run: fail
//@ description: Read entity by UUID
// biome-ignore format: readability
["let", "identity", ["fn", {"#tuple": ["T"]}, {"#struct": {"value": "T"}}, "T", "value"],
["::core::graph::tail::collect",
  ["::core::graph::body::filter",
    ["::core::graph::head::entities", ["::core::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["==",
        "identity", // This is very silly and isn't something you should probably do
         //~^ ERROR Closure definition not supported here
        "identity"
        //~^ ERROR Closure definition not supported here
      ]
    ]
  ]
]]
